@@ -1,0 +1,11 @@
+#Ant properties
+#Used only in testing
+jdbc.admin.id=SA
+jdbc.admin.password=
+jdbc.driver.class=org.hsqldb.jdbcDriver
+jdbc.driver.id=hsql
+jdbc.driver.jar=tests/lib/hsqldb-1.8.0.10.jar
+jdbc.driver.url=jdbc\:hsqldb\:hsql\://localhost/jspwiki
+jdbc.jar.present=tests/lib/hsqldb-1.8.0.10.jar
+jdbc.user.id=jspwiki
+jdbc.user.password=password
